<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        >

        <TextView
            android:id="@+id/typBase"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CBase"
            android:text="@string/typBase"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typCoupNat"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CNat"
            android:text="@string/typCoupNat"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typPlein"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CPlein"
            android:text="Plein"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typFinesse"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CFinesse"
            android:text="Finesse"
            android:textSize="12dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/typEffet"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CEffet"
            android:text="@string/typEffet"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typCoule"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CCoule"
            android:text="@string/typCoule"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typRetro"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CRetro"
            android:text="@string/typRetro"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typMasse"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CMasse"
            android:text="@string/typMasse"
            android:textSize="12dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/typRappel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CRappel"
            android:text="@string/typRappel"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typPlacement"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CPlace"
            android:text="@string/typPlacement"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typBande"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CBande"
            android:text="@string/typBande"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typ3Bandes"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="C3Bandes"
            android:text="@string/typ3Bandes"
            android:textSize="12dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/typPret"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CPret"
            android:text="Bille de pret"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typEchelle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CEchelle"
            android:text="@string/typEchelle"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typBarrage"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CBarrage"
            android:text="Barrage"
            android:textSize="12dip" />

        <TextView
            android:id="@+id/typFolklo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="clickTypo"
            android:tag="CFolklo"
            android:text="Folklorique"
            android:textSize="12dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="2dp"></LinearLayout>


</LinearLayout>